* V1.5.0915
  * major move of 'repo' directory to 'ck' to support standard Python packaging
  * major improvement of setup.py to support standard Python packaging
  * fixing web interface paths to support standard Python packaging
  * adding alias 'ls' for 'list' command (suggested by Anton)

* V1.4.0909
  * fixing a few typos
  * adding system function with timeout possibility
     (useful for research in computer engineering where
      generated code may be buggy and result in infinite loops,
      i.e. during autotuning or compiler testing and bug detection)
  * ck where repo:<name> will print URL for remote repositories
     (suggested by Anton)
  * making text to select UIDs less ambiguous (asked by Anton)
  * fixing bug in flatten_dict while working with CLSmith
  * changing COPYRIGHT to COPYRIGHT.txt and LICENSE to LICENSE.txt

* v1.3.0824
  * fixing bug with repository recaching (when pulling dependent repositories)

* v1.3.0821
  * added listing of all modules and their actions in user-friendly format
  * added support to zip CK repositories in format suitable for BitTorrent
    (to optimize exchange of large artifacts)
  * improved functionality to update repo descriptions 
    and manage dependencies on other shared repositories
  * fixed a few tiny bugs
  * added support to create an entry from a given directory (importing directories)
  * added "input_json" function to kernel to input JSON from console ...
  * added option "@@@" to CMD to add JSON from console to input
  * exchanged "@@@" and "@@" in CMD for simplicity
  * improved 'edit' function with the possibility to edit not only 
      meta of an entry, but also description (via flag --edit_desc) -
      for example, useful to edit compiler flag description via
      $ ck pull repo:ck-autotuning
      $ ck edit compiler:gcc-49x
  * adding --min flag to ''load'' function to output 
    only desc and dict to console 
  * adding --without_files to avoid copying files 