@@ -3,6 +3,7 @@ ck (1.5.0915) RELEASED; urgency=high
   * major move of 'repo' directory to 'ck' to support standard Python packaging
   * major improvement of setup.py to support standard Python packaging
   * fixing web interface paths to support standard Python packaging
+  * supporting Conda packaging (Anaconda Scientific Python)
   * adding alias 'ls' for 'list' command (suggested by Anton)
 
  -- Grigori Fursin <Grigori.Fursin@cTuning.org>  15 Sep 2015 11:12:13 +0100
